@@ -1,6 +1,8 @@
 #ifndef TEST_H
 #define TEST_H
-/* v1.1 */
+/* v1.2 */
+
+#include <stdbool.h>
 
 //#define REPORT_VERBOSE
 #define REPORT_FILE
